--- a/index.html
+++ b/index.html
@@ -7,28 +7,62 @@
   <style>
     body { font-family: sans-serif; background: #f6f6f6; margin:0; padding:0; }
     h1 { text-align: center; margin-top: 1rem; }
-    .map-container { max-width: 400px; margin: 2rem auto; background: #fff; border-radius: 10px; padding: 1rem; box-shadow: 0 2px 10px rgba(0,0,0,0.07);}
-    svg { width: 100%; height: auto; }
-    .modal-bg { display: none; position: fixed; left:0;top:0;right:0;bottom:0;background:rgba(0,0,0,0.4); align-items:center; justify-content:center; z-index: 10;}
-    .modal { background: #fff; border-radius: 8px; max-width: 350px; padding: 1.5rem; box-shadow: 0 4px 20px rgba(0,0,0,0.1);}
+    .map-container { 
+      position: relative; 
+      max-width: 700px; 
+      margin: 2rem auto; 
+      background: #fff; 
+      border-radius: 10px; 
+      padding: 1rem; 
+      box-shadow: 0 2px 10px rgba(0,0,0,0.07);
+      min-height: 500px;
+    }
+    .svg-bg { width: 100%; height: auto; display: block; }
+    .stand-circle {
+      position: absolute;
+      width: 38px;
+      height: 38px;
+      border-radius: 50%;
+      background: #2196f3;
+      color: #fff;
+      text-align: center;
+      line-height: 38px;
+      font-weight: bold;
+      font-size: 16px;
+      cursor: pointer;
+      border: 2px solid #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.14);
+      transition: background 0.2s;
+    }
+    .stand-circle:hover { background: #1565c0; }
+    .modal-bg { 
+      display: none; 
+      position: fixed; 
+      left:0;top:0;right:0;bottom:0;
+      background:rgba(0,0,0,0.4); 
+      align-items:center; 
+      justify-content:center; 
+      z-index: 10;
+    }
+    .modal { 
+      background: #fff; 
+      border-radius: 8px; 
+      max-width: 350px; 
+      padding: 1.5rem; 
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
     .modal h2 { margin-top:0; }
     .close-btn { margin-top: 1rem; }
   </style>
 </head>
 <body>
   <h1>Vakantiebeurs Event Map</h1>
-  <div class="map-container">
-    <!-- Simple SVG Map -->
-    <svg viewBox="0 0 400 250">
-      <!-- Stand 1 -->
-      <circle cx="90" cy="80" r="22" fill="#2196f3" stroke="#fff" stroke-width="2" onclick="showModal(0)" style="cursor:pointer"/>
-      <text x="90" y="87" text-anchor="middle" font-size="15" fill="#fff">A10</text>
-      <!-- Stand 2 -->
-      <circle cx="250" cy="120" r="22" fill="#fbc02d" stroke="#fff" stroke-width="2" onclick="showModal(1)" style="cursor:pointer"/>
-      <text x="250" y="127" text-anchor="middle" font-size="15" fill="#fff">B05</text>
-      <!-- Add more stands as needed -->
-    </svg>
+  <div class="map-container" id="map-container">
+    <!-- The SVG map is loaded here -->
+    <img src="map.svg" alt="Event Map" class="svg-bg" id="svg-map">
+    <!-- Standholder circles will be placed by JS -->
   </div>
+  
   <!-- Modal Popup -->
   <div class="modal-bg" id="modal-bg" onclick="hideModal()">
     <div class="modal" id="modal" onclick="event.stopPropagation()">
@@ -41,31 +75,56 @@
   </div>
 
   <script>
-    // Example standholder data
-    const standholders = [
-      {
-        name: "TravelCo",
-        stand: "A10",
-        description: "Specialist in adventure travel.",
-        website: "https://travelco.com"
-      },
-      {
-        name: "SunTours",
-        stand: "B05",
-        description: "Beach holidays and family fun.",
-        website: "https://suntours.com"
-      }
-    ];
+    // Load standholders.json and place circles
+    fetch('standholders.json')
+      .then(response => response.json())
+      .then(standholders => {
+        const container = document.getElementById('map-container');
+        const svgImg = document.getElementById('svg-map');
 
-    function showModal(idx) {
-      document.getElementById("modal-title").textContent = standholders[idx].name;
-      document.getElementById("modal-stand").textContent = standholders[idx].stand;
-      document.getElementById("modal-desc").textContent = standholders[idx].description;
-      document.getElementById("modal-link").href = standholders[idx].website;
+        function placeCircles() {
+          // Remove old circles
+          Array.from(document.getElementsByClassName('stand-circle')).forEach(e => e.remove());
+          
+          // Get SVG size
+          const rect = svgImg.getBoundingClientRect();
+          const containerRect = container.getBoundingClientRect();
+          const offsetLeft = rect.left - containerRect.left;
+          const offsetTop = rect.top - containerRect.top;
+          const width = rect.width;
+          const height = rect.height;
+
+          standholders.forEach((stand, i) => {
+            // Stand coordinates are relative to SVG's viewBox (e.g. 0-700, 0-500)
+            // Adjust these values based on your SVG's dimensions!
+            const x = (stand.x / 700) * width + offsetLeft - 19; // center circle
+            const y = (stand.y / 500) * height + offsetTop - 19;
+            const el = document.createElement('div');
+            el.className = 'stand-circle';
+            el.style.left = x + 'px';
+            el.style.top = y + 'px';
+            el.textContent = stand.stand;
+            el.onclick = () => showModal(stand);
+            container.appendChild(el);
+          });
+        }
+
+        // Place circles after image loads
+        svgImg.onload = placeCircles;
+        // Also place after a short delay (in case onload doesn't fire)
+        setTimeout(placeCircles, 1000);
+        window.addEventListener('resize', placeCircles);
+      });
+
+    // Modal logic
+    function showModal(stand) {
+      document.getElementById("modal-title").textContent = stand.name;
+      document.getElementById("modal-stand").textContent = stand.stand;
+      document.getElementById("modal-desc").textContent = stand.description;
+      document.getElementById("modal-link").href = stand.website;
       document.getElementById("modal-link").textContent = "Visit website";
       document.getElementById("modal-bg").style.display = "flex";
     }
-
     function hideModal() {
       document.getElementById("modal-bg").style.display = "none";
     }
