--- a/index.html
+++ b/index.html
@@ -5,36 +5,37 @@
   <title>Vakantiebeurs Event Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: sans-serif; background: #f6f6f6; margin:0; padding:0; }
+    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f6f6f6; margin:0; padding:0; }
     h1 { text-align: center; margin-top: 1rem; }
     .map-container { 
       position: relative; 
-      max-width: 700px; 
+      max-width: 800px; 
       margin: 2rem auto; 
       background: #fff; 
       border-radius: 10px; 
       padding: 1rem; 
       box-shadow: 0 2px 10px rgba(0,0,0,0.07);
-      min-height: 500px;
+      min-height: 520px;
     }
-    .svg-bg { width: 100%; height: auto; display: block; }
+    .svg-bg { width: 100%; height: auto; display: block; border-radius: 8px;}
     .stand-circle {
       position: absolute;
-      width: 38px;
-      height: 38px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
-      background: #2196f3;
+      background: #1976d2;
       color: #fff;
       text-align: center;
-      line-height: 38px;
+      line-height: 40px;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 17px;
       cursor: pointer;
       border: 2px solid #fff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.14);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
       transition: background 0.2s;
+      z-index: 2;
     }
-    .stand-circle:hover { background: #1565c0; }
+    .stand-circle:hover, .stand-circle:focus { background: #004ba0; outline: none; }
     .modal-bg { 
       display: none; 
       position: fixed; 
@@ -42,17 +43,23 @@
       background:rgba(0,0,0,0.4); 
       align-items:center; 
       justify-content:center; 
-      z-index: 10;
+      z-index: 100;
     }
     .modal { 
       background: #fff; 
-      border-radius: 8px; 
-      max-width: 350px; 
-      padding: 1.5rem; 
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border-radius: 10px; 
+      max-width: 340px; 
+      padding: 2rem; 
+      box-shadow: 0 4px 20px rgba(0,0,0,0.14);
     }
-    .modal h2 { margin-top:0; }
-    .close-btn { margin-top: 1rem; }
+    .modal h2 { margin-top:0; margin-bottom: 0.5rem;}
+    .modal-desc { margin-bottom: 0.8rem;}
+    .close-btn { margin-top: 1rem; background: #1976d2; color: #fff; border: none; padding: 0.6rem 1.2rem; border-radius: 5px; cursor: pointer; font-size: 1rem;}
+    .close-btn:hover { background: #004ba0;}
+    @media (max-width: 600px) {
+      .map-container { min-height: 320px; }
+      .modal { max-width: 95vw; padding: 1rem; }
+    }
   </style>
 </head>
 <body>
@@ -68,8 +75,8 @@
     <div class="modal" id="modal" onclick="event.stopPropagation()">
       <h2 id="modal-title"></h2>
       <p><b>Stand:</b> <span id="modal-stand"></span></p>
-      <p id="modal-desc"></p>
-      <p><a id="modal-link" href="#" target="_blank">Visit website</a></p>
+      <div class="modal-desc" id="modal-desc"></div>
+      <p><a id="modal-link" href="#" target="_blank" style="color:#1976d2;text-decoration:underline;font-weight:bold;">Visit website</a></p>
       <button class="close-btn" onclick="hideModal()">Close</button>
     </div>
   </div>
@@ -81,11 +88,9 @@
       .then(standholders => {
         const container = document.getElementById('map-container');
         const svgImg = document.getElementById('svg-map');
-
         function placeCircles() {
           // Remove old circles
           Array.from(document.getElementsByClassName('stand-circle')).forEach(e => e.remove());
-          
           // Get SVG size
           const rect = svgImg.getBoundingClientRect();
           const containerRect = container.getBoundingClientRect();
@@ -93,25 +98,24 @@
           const offsetTop = rect.top - containerRect.top;
           const width = rect.width;
           const height = rect.height;
-
           standholders.forEach((stand, i) => {
             // Stand coordinates are relative to SVG's viewBox (e.g. 0-700, 0-500)
             // Adjust these values based on your SVG's dimensions!
-            const x = (stand.x / 700) * width + offsetLeft - 19; // center circle
-            const y = (stand.y / 500) * height + offsetTop - 19;
+            const x = (stand.x / 700) * width + offsetLeft - 20; // center circle
+            const y = (stand.y / 500) * height + offsetTop - 20;
             const el = document.createElement('div');
             el.className = 'stand-circle';
+            el.setAttribute('tabindex', '0'); // For keyboard accessibility
+            el.setAttribute('title', stand.name);
             el.style.left = x + 'px';
             el.style.top = y + 'px';
             el.textContent = stand.stand;
             el.onclick = () => showModal(stand);
+            el.onkeydown = (e) => { if (e.key === 'Enter') showModal(stand); }
             container.appendChild(el);
           });
         }
-
-        // Place circles after image loads
         svgImg.onload = placeCircles;
-        // Also place after a short delay (in case onload doesn't fire)
         setTimeout(placeCircles, 1000);
         window.addEventListener('resize', placeCircles);
       });
@@ -122,7 +126,7 @@
       document.getElementById("modal-stand").textContent = stand.stand;
       document.getElementById("modal-desc").textContent = stand.description;
       document.getElementById("modal-link").href = stand.website;
-      document.getElementById("modal-link").textContent = "Visit website";
+      document.getElementById("modal-link").textContent = (stand.website ? "Visit website" : "");
       document.getElementById("modal-bg").style.display = "flex";
     }
     function hideModal() {
