--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <h1>Vakantiebeurs Event Map</h1>
   <div class="map-container" id="map-container">
     <!-- The SVG map is loaded here -->
-    <img src="map.svg" alt="Event Map" class="svg-bg" id="svg-map">
+    <img src="src/map.svg" alt="Event Map" class="svg-bg" id="svg-map">
     <!-- Standholder circles will be placed by JS -->
   </div>
   
