--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
   <style>
     body { font-family: 'Segoe UI', Arial, sans-serif; background: #f6f6f6; margin:0; padding:0; }
     h1 { text-align: center; margin-top: 1rem; }
-    .map-container { 
-      position: relative; 
-      max-width: 800px; 
-      margin: 2rem auto; 
-      background: #fff; 
-      border-radius: 10px; 
-      padding: 1rem; 
-      box-shadow: 0 2px 10px rgba(0,0,0,0.07);
-      min-height: 520px;
-    }
-    .svg-bg { width: 100%; height: auto; display: block; border-radius: 8px;}
+   .map-container {
+  position: relative;
+  width: 100vw;   /* Full viewport width */
+  max-width: 100vw;
+  min-height: 80vh; /* Fill most of the viewport height */
+  margin: 0;
+  background: #fff;
+  border-radius: 0;
+  padding: 0;
+  box-shadow: none;
+}
+
+.svg-bg {
+  width: 100vw;   /* Full width of the viewport */
+  height: 80vh;   /* Fill most of the viewport height */
+  max-width: 100vw;
+  max-height: 80vh;
+  display: block;
+  object-fit: contain;
+  border-radius: 0;
+}
     .stand-circle {
       position: absolute;
       width: 40px;
