--- a/index.html
+++ b/index.html
@@ -5,40 +5,59 @@
   <title>Vakantiebeurs Event Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f6f6f6; margin:0; padding:0; }
-    h1 { text-align: center; margin-top: 1rem; }
-   .map-container {
-  position: relative;
-  width: 100vw;   /* Full viewport width */
-  max-width: 100vw;
-  min-height: 100vh; /* Fill most of the viewport height */
-  margin: 0;
-  background: #fff;
-  border-radius: 0;
-  padding: 0;
-  box-shadow: none;
-}
-
-.svg-bg {
-  width: 100vw;   /* Full width of the viewport */
-  height: 100vh;   /* Fill most of the viewport height */
-  max-width: 100vw;
-  max-height: 80vh;
-  display: block;
-  object-fit: contain;
-  border-radius: 0;
-}
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #f6f6f6;
+      margin: 0;
+      padding: 0;
+    }
+    .map-container {
+      position: relative;
+      width: 100vw;
+      max-width: 100vw;
+      min-height: 80vh;
+      margin: 0;
+      padding: 0;
+      background: #fff;
+      border-radius: 0;
+      box-shadow: none;
+      overflow: hidden;
+    }
+    .svg-bg {
+      width: 100vw;
+      height: 80vh;
+      max-width: 100vw;
+      max-height: 80vh;
+      display: block;
+      object-fit: contain;
+      border-radius: 0;
+    }
+    .title-overlay {
+      position: absolute;
+      top: 5%;
+      left: 50%;
+      transform: translate(-50%, 0);
+      color: #1976d2;
+      background: rgba(255,255,255,0.85);
+      padding: 0.6em 2.2em;
+      border-radius: 16px;
+      font-size: 2.2em;
+      font-weight: bold;
+      box-shadow: 0 2px 18px rgba(0,0,0,0.11);
+      z-index: 5;
+      pointer-events: none; /* allows click-through to map below */
+      text-align: center;
+    }
     .stand-circle {
       position: absolute;
-      width: 40px;
-      height: 40px;
+      width: 24px;
+      height: 24px;
       border-radius: 50%;
       background: #1976d2;
       color: #fff;
       text-align: center;
-      line-height: 40px;
-      font-weight: bold;
-      font-size: 17px;
+      line-height: 24px;
+      font-size: 12px;
       cursor: pointer;
       border: 2px solid #fff;
       box-shadow: 0 2px 8px rgba(0,0,0,0.13);
@@ -68,14 +87,14 @@
     .close-btn:hover { background: #004ba0;}
     @media (max-width: 600px) {
       .map-container { min-height: 320px; }
+      .title-overlay { font-size: 1.2em; padding: 0.4em 1em; }
       .modal { max-width: 95vw; padding: 1rem; }
     }
   </style>
 </head>
 <body>
-  <h1>Vakantiebeurs Event Map</h1>
   <div class="map-container" id="map-container">
-    <!-- The SVG map is loaded here -->
+    <div class="title-overlay">Vakantiebeurs Event Map</div>
     <img src="src/map.svg" alt="Event Map" class="svg-bg" id="svg-map">
     <!-- Standholder circles will be placed by JS -->
   </div>
@@ -93,15 +112,13 @@
 
   <script>
     // Load standholders.json and place circles
-     fetch('src/data/standholders.json')
+    fetch('src/data/standholders.json')
       .then(response => response.json())
       .then(standholders => {
         const container = document.getElementById('map-container');
         const svgImg = document.getElementById('svg-map');
         function placeCircles() {
-          // Remove old circles
           Array.from(document.getElementsByClassName('stand-circle')).forEach(e => e.remove());
-          // Get SVG size
           const rect = svgImg.getBoundingClientRect();
           const containerRect = container.getBoundingClientRect();
           const offsetLeft = rect.left - containerRect.left;
@@ -111,11 +128,11 @@
           standholders.forEach((stand, i) => {
             // Stand coordinates are relative to SVG's viewBox (e.g. 0-700, 0-500)
             // Adjust these values based on your SVG's dimensions!
-            const x = (stand.x / 700) * width + offsetLeft - 20; // center circle
-            const y = (stand.y / 500) * height + offsetTop - 20;
+            const x = (stand.x / 700) * width + offsetLeft - 12; // center circle (half of width)
+            const y = (stand.y / 500) * height + offsetTop - 12;
             const el = document.createElement('div');
             el.className = 'stand-circle';
-            el.setAttribute('tabindex', '0'); // For keyboard accessibility
+            el.setAttribute('tabindex', '0');
             el.setAttribute('title', stand.name);
             el.style.left = x + 'px';
             el.style.top = y + 'px';
