--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vakantiebeurs Event Map</title>
+  <title>4x4 Vakantiebeurs Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
