--- a/index.html
+++ b/index.html
@@ -2,36 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>4x4 Vakantiebeurs Map</title>
+  <title>Vakantiebeurs Event Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: #f6f6f6;
-      margin: 0;
-      padding: 0;
+    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f6f6f6; margin:0; padding:0; }
+    /* Map container styles */
+    .map-container { 
+      position: relative; 
+      max-width: 800px; 
+      margin: 2rem auto; 
+      background: #fff; 
+      border-radius: 10px; 
+      padding: 1rem; 
+      box-shadow: 0 2px 10px rgba(0,0,0,0.07);
+      min-height: 520px;
     }
-    .map-container {
-      position: relative;
-      width: 100vw;
-      max-width: 100vw;
-      min-height: 80vh;
-      margin: 0;
-      padding: 0;
-      background: #fff;
-      border-radius: 0;
-      box-shadow: none;
-      overflow: hidden;
-    }
-    .svg-bg {
-      width: 100vw;
-      height: 80vh;
-      max-width: 100vw;
-      max-height: 80vh;
-      display: block;
-      object-fit: contain;
-      border-radius: 0;
-    }
+    /* SVG background image */
+    .svg-bg { width: 100%; height: auto; display: block; border-radius: 8px;}
+    /* Title overlay styles */
     .title-overlay {
       position: absolute;
       top: 5%;
@@ -48,16 +36,18 @@
       pointer-events: none; /* allows click-through to map below */
       text-align: center;
     }
+    /* Stand circles */
     .stand-circle {
       position: absolute;
-      width: 24px;
-      height: 24px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       background: #1976d2;
       color: #fff;
       text-align: center;
-      line-height: 24px;
-      font-size: 12px;
+      line-height: 40px;
+      font-weight: bold;
+      font-size: 17px;
       cursor: pointer;
       border: 2px solid #fff;
       box-shadow: 0 2px 8px rgba(0,0,0,0.13);
@@ -65,6 +55,7 @@
       z-index: 2;
     }
     .stand-circle:hover, .stand-circle:focus { background: #004ba0; outline: none; }
+    /* Modal styles */
     .modal-bg { 
       display: none; 
       position: fixed; 
@@ -94,7 +85,9 @@
 </head>
 <body>
   <div class="map-container" id="map-container">
+    <!-- Overlaid page title -->
     <div class="title-overlay">Vakantiebeurs Event Map</div>
+    <!-- The SVG map is loaded here -->
     <img src="src/map.svg" alt="Event Map" class="svg-bg" id="svg-map">
     <!-- Standholder circles will be placed by JS -->
   </div>
@@ -118,21 +111,24 @@
         const container = document.getElementById('map-container');
         const svgImg = document.getElementById('svg-map');
         function placeCircles() {
+          // Remove old circles
           Array.from(document.getElementsByClassName('stand-circle')).forEach(e => e.remove());
+          // Get SVG size and position
           const rect = svgImg.getBoundingClientRect();
           const containerRect = container.getBoundingClientRect();
           const offsetLeft = rect.left - containerRect.left;
           const offsetTop = rect.top - containerRect.top;
           const width = rect.width;
           const height = rect.height;
+          // Place each standholder circle
           standholders.forEach((stand, i) => {
             // Stand coordinates are relative to SVG's viewBox (e.g. 0-700, 0-500)
             // Adjust these values based on your SVG's dimensions!
-            const x = (stand.x / 700) * width + offsetLeft - 12; // center circle (half of width)
-            const y = (stand.y / 500) * height + offsetTop - 12;
+            const x = (stand.x / 700) * width + offsetLeft - 20; // center circle (half of width)
+            const y = (stand.y / 500) * height + offsetTop - 20;
             const el = document.createElement('div');
             el.className = 'stand-circle';
-            el.setAttribute('tabindex', '0');
+            el.setAttribute('tabindex', '0'); // For keyboard accessibility
             el.setAttribute('title', stand.name);
             el.style.left = x + 'px';
             el.style.top = y + 'px';
@@ -142,7 +138,9 @@
             container.appendChild(el);
           });
         }
+        // Place circles after image loads
         svgImg.onload = placeCircles;
+        // Also place after a short delay (in case onload doesn't fire)
         setTimeout(placeCircles, 1000);
         window.addEventListener('resize', placeCircles);
       });
