--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
   <div class="map-container" id="map-container">
     <!-- Overlaid page title -->
-    <div class="title-overlay">Vakantiebeurs Event Map</div>
+    <div class="title-overlay">4x4 Vakantiebeurs</div>
     <!-- The SVG map is loaded here -->
     <img src="src/map.svg" alt="Event Map" class="svg-bg" id="svg-map">
     <!-- Standholder circles will be placed by JS -->
