--- a/index.html
+++ b/index.html
@@ -5,20 +5,38 @@
   <title>4x4 Vakantiebeurs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f6f6f6; margin:0; padding:0; }
+    body {
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background: #f6f6f6;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
     /* Map container styles */
-    .map-container { 
-      position: relative; 
-      max-width: 800px; 
-      margin: 2rem auto; 
-      background: #fff; 
-      border-radius: 10px; 
-      padding: 1rem; 
-      box-shadow: 0 2px 10px rgba(0,0,0,0.07);
-      min-height: 520px;
-    }
-    /* SVG background image */
-    .svg-bg { width: 100%; height: auto; display: block; border-radius: 8px;}
+  .map-container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+  border-radius: 0;
+  box-shadow: none;
+  overflow: hidden;
+}
+    /* SVG background image */.svg-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+  display: block;
+  object-fit: contain;
+  border-radius: 0;
+  z-index: 1;
+}
     /* Title overlay styles */
     .title-overlay {
       position: absolute;
