--- a/index.html
+++ b/index.html
@@ -11,120 +11,140 @@
       background: #f6f6f6;
       margin: 0;
       padding: 0;
-      height: 100vh; /* Ensure body fills viewport height */
+      height: 100vh;
     }
 
     /* ====== Map Container ====== */
     .map-container {
-      position: relative; /* Needed for absolute positioning of overlay and circles */
-      width: 100vw;       /* Full browser width */
-      height: 100vh;      /* Full browser height */
-      margin: 0;          /* Remove default margin */
-      padding: 0;         /* Remove default padding */
-      background: #fff;   /* White background behind map */
-      border-radius: 0;   /* No rounded corners */
-      box-shadow: none;   /* Remove shadow */
-      overflow: hidden;   /* Hide anything overflowing the container */
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+      background: #fff;
+      border-radius: 0;
+      box-shadow: none;
+      overflow: hidden;
     }
 
     /* ====== SVG Background Map ====== */
     .svg-bg {
-      position: absolute; /* So it fills the container */
+      position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;       /* Full width */
-      height: 100vh;      /* Full height */
+      width: 100vw;
+      height: 100vh;
       max-width: 100vw;
       max-height: 100vh;
       display: block;
-      object-fit: contain; /* Maintain aspect ratio */
+      object-fit: contain;
       border-radius: 0;
-      z-index: 1;          /* Ensure it's behind overlay and circles */
+      z-index: 1;
     }
 
     /* ====== Title Overlay ====== */
     .title-overlay {
-      position: absolute; /* Overlay on top of map */
-      top: 5%;            /* Push down from top of the map */
-      left: 50%;          /* Center horizontally */
-      transform: translate(-50%, 0); /* Center the overlay */
-      color: #1976d2;     /* Main theme color */
-      background: rgba(255,255,255,0.85); /* Semi-transparent background for readability */
+      position: absolute;
+      top: 5%;
+      left: 50%;
+      transform: translate(-50%, 0);
+      color: #1976d2;
+      background: rgba(255,255,255,0.85);
       padding: 0.6em 2.2em;
       border-radius: 16px;
       font-size: 2.2em;
       font-weight: bold;
-      box-shadow: 0 2px 18px rgba(0,0,0,0.11); /* Soft shadow */
-      z-index: 5;         /* Above map, below modal */
-      pointer-events: none; /* Allow clicks to pass through to map and circles */
+      box-shadow: 0 2px 18px rgba(0,0,0,0.11);
+      z-index: 5;
+      pointer-events: none;
       text-align: center;
-      /* Responsive adjustments */
     }
 
     /* ====== Standholder Circles (interactive) ====== */
     .stand-circle {
-      position: absolute; /* Placed dynamically by JS */
-      width: 40px;        /* Circle size */
+      position: absolute;
+      width: 40px;
       height: 40px;
-      border-radius: 50%; /* Make it a circle */
-      background: #1976d2; /* Theme color */
-      color: #fff;        /* White text */
-      text-align: center; 
-      line-height: 40px;  /* Vertically center text */
+      border-radius: 50%;
+      background: #1976d2;
+      color: #fff;
+      text-align: center;
+      line-height: 40px;
       font-weight: bold;
       font-size: 17px;
-      cursor: pointer;    /* Pointer on hover */
-      border: 2px solid #fff; /* White border for visibility */
-      box-shadow: 0 2px 8px rgba(0,0,0,0.13); /* Subtle shadow */
+      cursor: pointer;
+      border: 2px solid #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
       transition: background 0.2s;
-      z-index: 10;        /* Above map and overlay */
+      z-index: 10;
     }
     .stand-circle:hover, .stand-circle:focus {
-      background: #004ba0; /* Darker on hover/focus */
+      background: #004ba0;
       outline: none;
     }
 
     /* ====== Modal Styles (popup info) ====== */
     .modal-bg { 
-      display: none;      /* Hidden by default */
-      position: fixed; 
+      display: none;
+      position: fixed;
       left:0;top:0;right:0;bottom:0;
-      background:rgba(0,0,0,0.4); /* Dimmed background */
-      align-items:center; 
-      justify-content:center; 
-      z-index: 100;       /* Very top */
+      background:rgba(0,0,0,0.4);
+      align-items:center;
+      justify-content:center;
+      z-index: 100;
     }
-    .modal { 
-      background: #fff; 
-      border-radius: 10px; 
-      max-width: 340px; 
-      padding: 2rem; 
+    .modal {
+      background: #fff;
+      border-radius: 10px;
+      max-width: 340px;
+      padding: 2rem;
       box-shadow: 0 4px 20px rgba(0,0,0,0.14);
     }
     .modal h2 { margin-top:0; margin-bottom: 0.5rem;}
     .modal-desc { margin-bottom: 0.8rem;}
-    .close-btn { 
-      margin-top: 1rem; 
-      background: #1976d2; 
-      color: #fff; 
-      border: none; 
-      padding: 0.6rem 1.2rem; 
-      border-radius: 5px; 
-      cursor: pointer; 
+    .close-btn {
+      margin-top: 1rem;
+      background: #1976d2;
+      color: #fff;
+      border: none;
+      padding: 0.6rem 1.2rem;
+      border-radius: 5px;
+      cursor: pointer;
       font-size: 1rem;
     }
     .close-btn:hover { background: #004ba0;}
 
     /* ====== Responsive Adjustments ====== */
     @media (max-width: 600px) {
-  .map-container { min-height: 320px; }
-  .svg-bg { height: 320px; }
-  .title-overlay { 
-    font-size: 1em;        /* Smaller title on mobile */
-    padding: 0.3em 0.7em;  /* Less padding */
-  }
-  .modal { max-width: 95vw; padding: 1rem; }
-}
+      .map-container { min-height: 320px; }
+      .svg-bg { height: 320px; }
+      .title-overlay {
+        font-size: 1em;        /* Smaller title on mobile */
+        padding: 0.3em 0.7em;  /* Less padding */
+      }
+      .modal { max-width: 95vw; padding: 1rem; }
+    }
+
+    /* ====== Orientation Handling ====== */
+    @media only screen and (orientation: portrait) {
+      /* Show message to rotate device for the best experience */
+      .map-container::before {
+        content: "Please rotate your device to landscape for the best experience!";
+        position: fixed;
+        top: 0; left: 0;
+        width: 100vw; height: 100vh;
+        background: rgba(255,255,255,0.96);
+        color: #1976d2;
+        display: flex; align-items: center; justify-content: center;
+        font-size: 1.6em;
+        z-index: 9999;
+        text-align: center;
+        padding: 2em;
+      }
+      .map-container, .svg-bg {
+        filter: blur(5px); /* Blur map and circles when in portrait */
+      }
+    }
   </style>
 </head>
 <body>
@@ -186,17 +206,17 @@
              *   top  = (y / 500) * height + offsetTop - 20
              * Adjust -20 for half of circle width (40px).
              */
-            const x = (stand.x / 700) * width + offsetLeft - 20; // center circle horizontally
-            const y = (stand.y / 500) * height + offsetTop - 20; // center circle vertically
+            const x = (stand.x / 700) * width + offsetLeft - 20;
+            const y = (stand.y / 500) * height + offsetTop - 20;
 
             // Create the circle element
             const el = document.createElement('div');
             el.className = 'stand-circle';
-            el.setAttribute('tabindex', '0'); // Keyboard accessibility
-            el.setAttribute('title', stand.name); // Tooltip
+            el.setAttribute('tabindex', '0');
+            el.setAttribute('title', stand.name);
             el.style.left = x + 'px';
             el.style.top = y + 'px';
-            el.textContent = stand.stand;     // Show stand code
+            el.textContent = stand.stand;
 
             // Click/Enter opens modal with info
             el.onclick = () => showModal(stand);
