--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         filter: blur(5px);
       }
       body::before {
-        content: "Please rotate your device to landscape for the best experience!";
+        content: "Please rotate your device to landscape!";
         position: fixed;
         top: 0; left: 0;
         width: 100vw; height: 100vh;
@@ -117,10 +117,7 @@
       zoom: -1,
       center: [svgHeight/2, svgWidth/2], // center of the SVG
       zoomControl: true,
-      fitbounds([
-    [0, 0],
-    [4000, 2000]
-])
+      //fitbounds([[0, 0], [4000, 2000]])
     });
 
     // Add SVG as image overlay
