--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
       }
     }
     /* Stand label styles */
+    /* 
+    box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+    border: 2px solid #fff;
+    */
     .stand-label {
       background: #1976d2;
       color: #fff;
@@ -83,9 +87,8 @@
       font-size: 1em;
       padding: 0.2em 0.2em;
       text-align: center;
-      // box-shadow: 0 2px 8px rgba(0,0,0,0.13);
-      border: 2px solid #fff;
     }
+    
   </style>
 </head>
 <body>
