--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       font-size: 1em;
       padding: 0.2em 0.2em;
       text-align: center;
+      background: #1976d2;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+      border: 2px solid #fff;
     }
     
   </style>
