--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 weight: 2
               */
               const marker = L.circleMarker([stand.y, stand.x], {
+                title: stand.name
                 
               });
               marker.bindPopup(`
