--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 weight: 2
               */
               const marker = L.circleMarker([stand.y, stand.x], {
-                title: stand.name
+                title: "title",
                 
               });
               marker.bindPopup(`
