--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 weight: 2
               */
               const marker = L.marker([stand.y, stand.x], {
-                title: "title",
+                title: stand.name,
                 
               });
               marker.bindPopup(`
