--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               */
               const marker = L.marker([stand.y, stand.x], {
                 title: stand.name,
-                
+                riseOnHover: true
               });
               marker.bindPopup(`
                 <h2 style="margin:0;font-size:1.1em">${stand.name}</h2>
