--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                 riseOnHover: true
               });
               marker.bindPopup(`
+                <img src="./src/data/Logo_TrackingTrailer.jpg" style="width:100">
                 <h2 style="margin:0;font-size:1.1em">${stand.name}</h2>
                 <p><b>Stand:</b> ${stand.stand}</p>
                 <p style="margin:0 0 0.5em 0">${stand.description}</p>
