--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ht<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -155,7 +155,7 @@
                 riseOnHover: true
               });
               marker.bindPopup(`
-                <img src="./src/data/Logo_TrackingTrailer.jpg" style="width:10">
+                <img src="./src/data/Logo_TrackingTrailer.jpg" style="height:10">
                 <h2 style="margin:0;font-size:1.1em">${stand.name}</h2>
                 <p><b>Stand:</b> ${stand.stand}</p>
                 <p style="margin:0 0 0.5em 0">${stand.description}</p>
