--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ ht<!DOCTYPE html>
                 riseOnHover: true
               });
               marker.bindPopup(`
-                <img style="width:50">${stand.img}</img>
+                <img src=${stand.img} style="width:50px">
                 <h2 style="margin:0;font-size:1.1em">${stand.name}</h2>
                 <p><b>Stand:</b> ${stand.stand}</p>
                 <p style="margin:0 0 0.5em 0">${stand.description}</p>
