--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ ht<!DOCTYPE html>
               marker.bindTooltip(stand.stand, {
                 permanent: true, 
                 direction: 'center', 
-                offset: [0,0]
+                offset: [0,0],
+                opacity: 0
               });
               
               markerLayer.addLayer(marker);
