--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ ht<!DOCTYPE html>
     border: 2px solid #fff;
     */
     .stand-label {
-      color: #fff;
+      color: #000000;
       border-radius: 100%;
       font-weight: bold;
       font-size: 0.8em;
