--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@ ht<!DOCTYPE html>
     */
     .stand-label {
       color: #000000;
-      border-radius: 0%;
+      border-radius: 100%;
       font-weight: bold;
       font-size: 1em;
       padding: 0em 0em;
       text-align: center;
-      background: #1976d2;
+      background: #ffffff;
       box-shadow: 0 0px 0px rgba(0,0,0,0.13);
       border: 0px solid #fff;
     }
