--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ ht<!DOCTYPE html>
       border-radius: 100%;
     */
     .stand-label {
+      width: 1em;
       color: #000000;
       font-weight: bold;
       font-size: 1em;
