--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ ht<!DOCTYPE html>
                 permanent: true, 
                 direction: 'center', 
                 className: 'stand-label',
-                offset: [-15,0],
+                offset: [-15.5,-0.5],
                 opacity: 1
               });
               
