--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ ht<!DOCTYPE html>
          // Add the search control
       var searchControl = new L.Control.Search({
       layer: markerLayer,
-      propertyName: 'name'
+      propertyName: 'title'
       initial: false,
       marker: false,
       moveToLocation: function(latlng, title, map) {
