--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   /* ============================================
    BASIC PAGE & MAP STYLING
   ============================================ */
-
+    
     html, body {
       height: 100%;
       margin: 0;
@@ -36,11 +36,21 @@
       font-family: 'Segoe UI', Arial, sans-serif;
       background: #f6f6f6;
     }
+    
+    /* The map container should fill the entire viewport */
     #map {
       width: 100vw;
       height: 100%;
       z-index: 1;
     }
+    /* 
+    ============================================
+    TITLE OVERLAY (Centered Title Text)
+    ============================================
+    - Positioned absolutely in the center-top area
+    - Non-interactive (pointer-events: none)
+    */
+
     .title-overlay {
       position: absolute;
       top: 5%;
