--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
         padding: 0.5em;
       }
     }
+        
+    /* 
+    ============================================
+    LABEL STYLE FOR STAND NUMBERS
+    ============================================
+    - Always visible tooltips attached to markers
+    - Styled as simple white text boxes
+    */
+
     /* Tooltip Stand label styles */
     /* 
     background: #1976d2;
