--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-search/dist/leaflet-search.min.css" />
   
   <style>
-  /* ============================================
-   BASIC PAGE & MAP STYLING
-  ============================================ */
+    
+  /* 
+  ============================================
+  BASIC PAGE & MAP STYLING
+  ============================================ 
+  */
     
     html, body {
       height: 100%;
@@ -149,6 +152,11 @@
   </style>
 </head>
 <body>
+  <!-- 
+  ================================
+  MAIN MAP CONTAINER
+  ================================ -->
+
   <div id="map"></div>
   <div class="title-overlay">4x4 Vakantiebeurs</div>
   
