--- a/index.html
+++ b/index.html
@@ -184,13 +184,18 @@
     // For example, if your SVG's viewBox is "0 0 700 500":
     const svgWidth = 4000;
     const svgHeight = 2000;
+   // The image bounds tell Leaflet how large and where to draw your SVG.
+    // Format: [[southWestLat, southWestLng], [northEastLat, northEastLng]]
+    // Because we’re in flat mode, these are just y/x pairs.
+    // The SVG will be placed as an "image overlay" with the following corners:
+    // Leaflet expects bounds in the form [[southWestY, southWestX], [northEastY, northEastX]]
     // Leaflet image overlay bounds: [[southWestLat, southWestLng], [northEastLat, northEastLng]]
     // We'll set the image overlay so that [0,0] is bottom left, [700,500] is top right.
     // We'll use a simple "pseudo-coordinates" system for the SVG: y increases upward, x to right.
     // Note: These are not real lat/lng. They are just for overlaying your SVG and markers.
-
     // SouthWest corner (bottom left): [0, 0]
     // NorthEast corner (top right): [svgHeight, svgWidth] (Leaflet uses [lat, lng] i.e. [y, x])
+
     const imageBounds = [[0, 0], [svgHeight, svgWidth]];
 
     // Create the Leaflet map using the SVG coordinate system
