--- a/index.html
+++ b/index.html
@@ -320,10 +320,9 @@
         // through a layer by a specific property (here: "title").
         // It automatically lists options as you type.
         // ============================================================
-      var searchLayer = L.featureGroup().addTo(map);
         
       var searchControl = new L.Control.Search({
-      layer: searchLayer,           // The layer to search within
+      layer: markerLayer,           // The layer to search within
       propertyName: 'title',        // Search field (uses marker.options.title)
       initial: false,               // Don't prefill results on startup
       marker: false,                // Don't create a new marker when searching
