--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
   <!-- ============================================
        LEAFLET CORE STYLESHEET (required)
        ============================================ -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <!-- ============================================
-       LEAFLET SEARCH PLUGIN STYLESHEET
-       ============================================ -->
-  
-<link rel="stylesheet" href="https://unpkg.com/leaflet-control-search/dist/leaflet-search.min.css" />
-<script src="https://unpkg.com/leaflet-control-search/dist/leaflet-search.min.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet-control-search@2.9.9/dist/leaflet-search.min.css"/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet-control-search@2.9.9/dist/leaflet-search.min.js"></script>
   
   <style>
     
