Fix setView syntax in map configuration

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       zoom: -1,
       center: [svgHeight/2, svgWidth/2], // center of the SVG
       zoomControl: true,
-      //setView([0,0],1),
+      setView: [0,0],1,
       //fitbounds([[0, 0], [4000, 2000]])
     });
 
