Fix marker animation property in index.html

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       propertyName: 'title',        // Search field (uses marker.options.title)
       initial: false,               // Don't prefill results on startup
       marker: false,                // Don't create a new marker when searching
-      marker.animate: true,
+      animate: true,
       moveToLocation: function(latlng, title, map) {
         // Define what happens when an item is found
         // Here: zoom in and center on the found marker
